# data

./: .gitignore  README.md  publish.sh  pyproject.toml
.github/workflows/: test.yml
configs/: config.yaml
notebooks/: GiftEvalWrapper.ipynb  dataset_concat_demo.ipynb  full_scale_post_processing.ipynb  gift_eval_wrapper.ipynb  visualize_pipeline.ipynb
preprocessing/: config.py
preprocessing/augmentation/: linear_combo.py
preprocessing/common/: tensor_dataset.py
preprocessing/config/: __init__.py
preprocessing/dataloader/: pipeline.py
preprocessing/datasets/: base_dataset.py
preprocessing/downloader/: gift_eval.py  huggingface.py
preprocessing/serialization/: __init__.py  serialize.py
preprocessing/synthetic/: linear_trend.py
preprocessing/transform/: batching_dataset.py  combining_dataset.py  concat_dataset.py  dataset_builder.py  probabilistic_mixing_dataset.py  sliding_window_dataset.py  transforming_dataset.py  unbatching_dataset.py
preprocessing/transformation/: __init__.py  base.py  normalize.py
scripts/: download_data.py
tests/: test_batching_dataset.py  test_complex_dataset.py  test_normalizing_dataset.py  test_pipeline.py  test_probabilistic_mixing_dataset.py  test_unbatching_dataset.py
tests/serialization/: test_postprocessing_and_serialization.py  test_serialization.py
tests/synthetic/: test_linear_trend.py
tests/transform/: test_batching_dataset.py  test_combining_dataset.py  test_complex_dataset.py  test_concat_dataset.py  test_probabilistic_mixing_dataset.py  test_sliding_window_dataset.py  test_transforming_dataset.py  (+1 more)
(+1 files in other folders)
